# nonblock-logger

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  readme.md
examples/: basic.rs  drop.rs  format.rs  formater.rs  log.snippet  run_all.rs  runall.rs
examples/color/: Cargo.toml
examples/color-padded/: Cargo.toml
examples/color-padded/src/: logger.rs  main.rs
examples/color/src/: main.rs
src/: consumer.rs  error.rs  filter.rs  format.rs  formater.rs  lib.rs  macros.rs  output.rs
