[package]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/biluohc/nonblock-logger"
documentation = "https://docs.rs/nonblock-logger"
description = "A non-blocking logger for Rust"
categories = ["development-tools::debugging"]
keywords = ["log", "logging", "logger"]
exclude = ["examples/color/logtest.txt"]

name = "nonblock-logger"
version = "0.2.1"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

[features]
# default = ["color", "dbg"] # for dev
dbg = []
color = [ "yansi" ]

[dependencies]
log = "0.4"
chrono = "0.4"
crossbeam-channel = "0.5"
yansi = { version =  "0.5.1", optional = true }
